--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <!-- Permissão para acessar a câmera -->
+    <uses-permission android:name="android.permission.CAMERA" />
+    <!-- Permissão para gravar o áudio -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <!-- Permissão para fazer leitura do armazenamento -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <!-- Permissão para fazer escrita no armazenamento -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
       android:name=".MainApplication"
